# Op-Music

./: .gitignore  README.md
assets/: DESIGN.md  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner.rs
